--- a/styles/style.css
+++ b/styles/style.css
@@ -139,20 +139,30 @@ html {
   bottom: 0;
   left: 0;
   background: rgba(255, 255, 255, 1);
-  display: none;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  -webkit-box-shadow: 0px 40px 60px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 40px 60px rgba(0, 0, 0, 0.15);
+
+  -webkit-transform: translateX(-110%);
+  transform: translateX(-110%);
+
+  -webkit-transition: -webkit-transform 600ms ease-out;
+  transition: transform 600ms ease-out;
+}
+
+.game-over.show {
+  -webkit-transform: translateY(0);
+  transform: translateX(0);
 }
 
 .game-over-text {
   color: var(--clr-primary);
   font-size: calc(var(--board-gap) * 5.5);
   font-weight: 700;
-}
-
-.game-over.show {
-  display: flex;
 }
 
 .game-over .btn {
